# GraphicsEngine

./: CMakeLists.txt  CMakePresets.json  vcpkg.json
demo-app/: CMakeLists.txt
demo-app/include/: GameObject.h
demo-app/include/test_scenes/: SceneMain.h
demo-app/source/: GameObject.cpp  SceneMain.cpp  main.cpp
render-api/: CMakeLists.txt
render-api/include/: ExportRule.h
render-api/include/core/: AppModel.h  Renderer.h
render-api/include/resource/: Buffer.h  Shader.h
render-api/include/util/: ConsoleLog.h  Scene.h
render-api/source/: AppModel.cpp  ConsoleLog.cpp  Renderer.cpp  Scene.cpp
render-api/source/core/: AppModel.cpp  Renderer.cpp
render-api/source/resource/: Buffer.cpp  Shader.cpp
render-api/source/util/: ConsoleLog.cpp  Scene.cpp
